crates/check_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{ "linter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
{ "useTabs": false, "semi": true, "singleQuote": true }
```

# Emitted Messages

```block
check.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1    │ - {·"linter":·{·"enabled":·true·}·}
       1 │ + {
       2 │ + → "formatter":·{
       3 │ + → → "enabled":·true,
       4 │ + → → "formatWithErrors":·false,
       5 │ + → → "indentStyle":·"space",
       6 │ + → → "indentWidth":·2,
       7 │ + → → "lineEnding":·"lf",
       8 │ + → → "lineWidth":·80,
       9 │ + → → "attributePosition":·"auto",
      10 │ + → → "bracketSameLine":·false,
      11 │ + → → "bracketSpacing":·true,
      12 │ + → → "expand":·"auto",
      13 │ + → → "useEditorconfig":·true
      14 │ + → },
      15 │ + → "linter":·{·"enabled":·true·},
      16 │ + → "javascript":·{
      17 │ + → → "formatter":·{
      18 │ + → → → "jsxQuoteStyle":·"double",
      19 │ + → → → "quoteProperties":·"asNeeded",
      20 │ + → → → "trailingCommas":·"all",
      21 │ + → → → "semicolons":·"always",
      22 │ + → → → "arrowParentheses":·"always",
      23 │ + → → → "bracketSameLine":·false,
      24 │ + → → → "quoteStyle":·"single",
      25 │ + → → → "attributePosition":·"auto",
      26 │ + → → → "bracketSpacing":·true
      27 │ + → → }
      28 │ + → },
      29 │ + → "html":·{·"formatter":·{·"selfCloseVoidElements":·"always"·}·}
      30 │ + }
      31 │ + 
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ check migrate --write
  

```
