crates/check_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_no_file.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{ "linter": { "enabled": true } }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Check couldn't find a Prettier configuration file.
  


```
