crates/check_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{ "formatter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
{
        "overrides": [{
            "files": ["**/*.test.js"],
            "options": { "useTabs": false }
        }, {
            "files": ["**/*.spec.js"],
            "options": { "semi": true, "singleQuote": true }
        }, {
            "files": ["**/*.ts"],
            "options": { "useTabs": false, "semi": true, "singleQuote": true }
        }]
    }
```

# Emitted Messages

```block
check.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1    │ - {·"formatter":·{·"enabled":·true·}·}
       1 │ + {
       2 │ + → "formatter":·{
       3 │ + → → "enabled":·true,
       4 │ + → → "formatWithErrors":·false,
       5 │ + → → "indentStyle":·"space",
       6 │ + → → "indentWidth":·2,
       7 │ + → → "lineEnding":·"lf",
       8 │ + → → "lineWidth":·80,
       9 │ + → → "attributePosition":·"auto",
      10 │ + → → "bracketSameLine":·false,
      11 │ + → → "bracketSpacing":·true,
      12 │ + → → "expand":·"auto",
      13 │ + → → "useEditorconfig":·true
      14 │ + → },
      15 │ + → "javascript":·{
      16 │ + → → "formatter":·{
      17 │ + → → → "jsxQuoteStyle":·"double",
      18 │ + → → → "quoteProperties":·"asNeeded",
      19 │ + → → → "trailingCommas":·"all",
      20 │ + → → → "semicolons":·"asNeeded",
      21 │ + → → → "arrowParentheses":·"always",
      22 │ + → → → "bracketSameLine":·false,
      23 │ + → → → "quoteStyle":·"single",
      24 │ + → → → "attributePosition":·"auto",
      25 │ + → → → "bracketSpacing":·true
      26 │ + → → }
      27 │ + → },
      28 │ + → "html":·{·"formatter":·{·"selfCloseVoidElements":·"always"·}·},
      29 │ + → "overrides":·[
      30 │ + → → {·"includes":·["**/*.test.js"],·"formatter":·{·"indentStyle":·"space"·}·},
      31 │ + → → {
      32 │ + → → → "includes":·["**/*.spec.js"],
      33 │ + → → → "javascript":·{
      34 │ + → → → → "formatter":·{·"semicolons":·"always",·"quoteStyle":·"single"·}
      35 │ + → → → }
      36 │ + → → },
      37 │ + → → {
      38 │ + → → → "includes":·["**/*.ts"],
      39 │ + → → → "javascript":·{
      40 │ + → → → → "formatter":·{·"semicolons":·"always",·"quoteStyle":·"single"·}
      41 │ + → → → },
      42 │ + → → → "formatter":·{·"indentStyle":·"space"·}
      43 │ + → → }
      44 │ + → ]
      45 │ + }
      46 │ + 
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ check migrate --write
  

```
