crates/check_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_with_bad_top_level_print_width.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{ "formatter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
{ "printWidth": 666 }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: top-level Prettier configuration: The line width should be between 1 and 320, got 666
  
  


```
