crates/check_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_write_check_jsonc.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.jsonc`

```json
{
  "formatter": {
    "enabled": true,
    "formatWithErrors": false,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineEnding": "lf",
    "lineWidth": 80,
    "attributePosition": "auto",
    "bracketSameLine": false,
    "bracketSpacing": true,
    "expand": "auto",
    "useEditorconfig": true
  },
  "linter": { "enabled": true },
  "javascript": {
    "formatter": {
      "jsxQuoteStyle": "double",
      "quoteProperties": "asNeeded",
      "trailingCommas": "all",
      "semicolons": "always",
      "arrowParentheses": "always",
      "bracketSameLine": false,
      "quoteStyle": "single",
      "attributePosition": "auto",
      "bracketSpacing": true
    }
  },
  "html": { "formatter": { "selfCloseVoidElements": "always" } }
}
```

## `.prettierrc`

```prettierrc
{ "useTabs": false, "semi": true, "singleQuote": true }
```

# Emitted Messages

```block
.prettierrc has been successfully migrated.
```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.jsonc: configuration successfully migrated.
  

```
